--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "SalathielGenese <salathielgenese@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "deploy": "node build-404.js && now && now alias"
+  }
 }
