--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "license": "MIT",
   "scripts": {
     "deploy": "node build-404.js && now && now alias"
+  },
+  "dependencies": {
+    "nodemailer": "^5.1.1"
   }
 }
