change for and express app

--- a/now.json
+++ b/now.json
@@ -4,58 +4,17 @@
   "alias": "dhavalveera.macrocephal.cloud",
   "builds": [
     {
-      "src": "api/**/*.js",
+      "src": "index.js",
       "config": {
-        "maxLambdaSize": "15mb"
+        "maxLambdaSize": "50mb"
       },
       "use": "@now/node"
-    },
-    {
-      "src": "**/*.html",
-      "config": {
-        "maxLambdaSize": "15mb"
-      },
-      "use": "@now/html-minifier"
-    },
-    {
-      "src": "js/**/*.js",
-      "config": {
-        "maxLambdaSize": "15mb"
-      },
-      "use": "@now/html-minifier"
-    },
-    {
-      "src": "css/**/*.css",
-      "config": {
-        "maxLambdaSize": "15mb"
-      },
-      "use": "@now/html-minifier"
     }
   ],
   "routes": [
     {
-      "src": "/",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/js",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/css",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/api",
-      "dest": "/index.html"
-    },
-    {
-      "dest": "/index.html",
-      "src": "/api/-"
-    },
-    {
-      "dest": "/index.html",
-      "src": "/api/-/contact"
+      "src": ".*",
+      "dest": "index.js"
     }
   ]
 }
